//
//  LoginAccessibility.swift
//  AccessibilityDemo
//
//  Created by Robert Crabtree on 4/7/24.
//

import Foundation

public enum LoginAccessibility: String {
    case view = "loginView"
    case emailTextField
    case passwordTextField
    case loginButton
    case backButton
}
