//
//  HomeAccessibility.swift
//  AccessibilityDemo
//
//  Created by Robert Crabtree on 4/7/24.
//

import Foundation

public enum HomeAccessibility: String {
    case logoutButton
    case logoutOKAction
    case logoutCancelAction
}
